...
    <string name="every_day">Every day</string>
    <string name="cycle_pause_days">Pause days</string>
    <string name="cycle_start_date">First cycle start</string>
    <string name="cycle_reminder">Cyclic reminder</string>
    <string name="weekday_limited">Limited to some weekdays</string>
    <string name="reminders">Reminders</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="seven_days">7 days</string>
    <string name="analysis">Analysis</string>
    <string name="tabular_view">Tabular view</string>
    <string name="fourteen_days">14 days</string>
    <string name="thirty_days">30 days</string>
...
    <string name="edit_medicine_stock_settings">Edit medicine stock settings</string>
    <string name="clear_dates">Clear dates</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="refill_amount">Refill (%s)</string>
    <string name="expiration_date_notification">The medicine %1$s expires on %2$s.\nConsider replacing the medicine.</string>
    <string name="select_all">Select all</string>
    <string name="by_name">By name</string>
    <string name="by_creation_date_ascending">Ascending by creation date</string>
    <string name="by_creation_date_descending">Descending by creation date</string>
    <string name="create_out_of_stock_reminder">Create out of stock reminder</string>
    <string name="successfully_created_reminder">Successfully created new reminder</string>
    <string name="create_expiration_date_reminder">Create expiration date reminder</string>
    <string name="duplicate">Duplicate</string>
...
