...
            app:destination="@id/advancedReminderPreferencesStockFragment" />
    </fragment>
    <argument
        android:name="reminderId"
        app:argType="integer" />
    <argument
        android:name="medicineName"
        app:argType="string" />
    <action
        android:id="@+id/action_global_preferencesFragment"
        app:destination="@id/preferencesFragment" />
    <fragment
        android:id="@+id/statisticsFragment"
...
